metadata/sf-prod/force-app/main/default/objects/workspan__PicklistMapping__c/workspan__PicklistMapping__c.object-meta.xml
<CustomObject>
    <label>Picklist Mapping</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Picklist Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picklist Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>