metadata/sf-prod/force-app/main/default/objects/workspan__PicklistMapping__c/fields/workspan__Partner__c.field-meta.xml
<CustomField>
    <fullName>workspan__Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partner</label>
    <referenceTo>workspan__Partner__c</referenceTo>
    <relationshipLabel>Picklist Mappings</relationshipLabel>
    <relationshipName>PicklistMappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>