metadata/sf-prod/force-app/main/default/objects/workspan__PicklistMapping__c/fields/workspan__ReferralPicklistFieldName__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralPicklistFieldName__c</fullName>
    <label>Referral Picklist Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>