metadata/sf-prod/force-app/main/default/objects/workspan__PicklistMapping__c/fields/workspan__ReferralPicklistFieldValue__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralPicklistFieldValue__c</fullName>
    <label>Referral Picklist Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>