metadata/sf-prod/force-app/main/default/objects/workspan__PicklistMapping__c/fields/workspan__SourceFieldPath__c.field-meta.xml
<CustomField>
    <fullName>workspan__SourceFieldPath__c</fullName>
    <label>Source Field Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>